update feature / auto back to center when mouse out the video frame, support latitude and longitude.

--- a/src/styles/plugin.scss
+++ b/src/styles/plugin.scss
@@ -3,10 +3,26 @@
  */
 
 .video-js {
+  .vjs-control-bar{
+    z-index: 5;
+  }
+
   &.vjs-panorama {
     display: block;
 
     .vjs-video-canvas{
+      position: absolute;
+      top: 0;
+      left: 50%;
+      -webkit-transform: translateX(-50%) translateZ(0);
+      -moz-transform: translateX(-50%) translateZ(0);
+      -o-transform: translateX(-50%) translateZ(0);
+      transform: translateX(-50%) translateZ(0);
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      background: #000;
       cursor: pointer;
     }
 
@@ -19,9 +35,11 @@
       -ms-transform: translate(-50%, -50%);
       -o-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
-      font-size: 1.5em;
+      font-size: 1.3em;
+      font-size: 1vw;
       padding: 0.5em 1em;
       background: #000;
+      color: #FFF;
       -webkit-border-radius: 0.5em;
       -moz-border-radius: 0.5em;
       border-radius: 0.5em;
