--- a/src/styles/plugin.scss
+++ b/src/styles/plugin.scss
@@ -2,9 +2,20 @@
  * Created by yanwsh on 4/3/16.
  */
 
+.IIV::-webkit-media-controls-play-button,
+.IIV::-webkit-media-controls-start-playback-button {
+  opacity: 0;
+  pointer-events: none;
+  width: 5px;
+}
+
 .video-js {
   .vjs-control-bar{
     z-index: 5;
+  }
+
+  &.vjs-using-native-controls .vjs-poster, &.vjs-using-native-controls .vjs-big-play-button{
+    display: block;
   }
 
   &.vjs-panorama {
