--- a/src/styles/plugin.scss
+++ b/src/styles/plugin.scss
@@ -49,12 +49,11 @@
       font-size: 1.3em;
       font-size: 1vw;
       padding: 0.5em 1em;
-      background: #000;
+      background: rgba(0, 0, 0, 0.8);
       color: #FFF;
       -webkit-border-radius: 0.5em;
       -moz-border-radius: 0.5em;
       border-radius: 0.5em;
-      opacity: 0.8;
       -webkit-transition: opacity 0.3s linear;
       -moz-transition: opacity 0.3s linear;
       -ms-transition: opacity 0.3s linear;
@@ -77,5 +76,25 @@
     &.vjs-panorama-moible-inline-video.vjs-waiting .vjs-loading-spinner{
       display: block!important;
     }
+
+    &.vjs-panorama-moible-inline-video-buffering .vjs-loading-spinner{
+      display: block!important;
+    }
+
+
+    &.vjs-panorama-moible-inline-video-buffering .vjs-loading-spinner:before,
+    &.vjs-panorama-moible-inline-video-buffering .vjs-loading-spinner:after{
+      -webkit-animation: vjs-spinner-spin 1.1s cubic-bezier(0.6, 0.2, 0, 0.8) infinite, vjs-spinner-fade 1.1s linear infinite;
+      animation: vjs-spinner-spin 1.1s cubic-bezier(0.6, 0.2, 0, 0.8) infinite, vjs-spinner-fade 1.1s linear infinite; }
+
+    &.vjs-panorama-moible-inline-video-buffering .vjs-loading-spinner:before,
+    &.vjs-panorama-moible-inline-video-buffering .vjs-loading-spinner:before {
+      border-top-color: white; }
+
+    &.vjs-panorama-moible-inline-video-buffering .vjs-loading-spinner:after,
+    &.vjs-panorama-moible-inline-video-buffering .vjs-loading-spinner:after {
+      border-top-color: white;
+      -webkit-animation-delay: 0.44s;
+      animation-delay: 0.44s; }
   }
 }
