remove unnecessary listeners.

--- a/src/styles/plugin.scss
+++ b/src/styles/plugin.scss
@@ -160,6 +160,9 @@
   .vjs-panorama-canvas{
     z-index: 10;
   }
+  .vjs-video-notice-label{
+    z-index: 11;
+  }
   .vjs-VR-control{
     float: left;
     position: relative;
