add animation support.

--- a/src/styles/plugin.scss
+++ b/src/styles/plugin.scss
@@ -77,7 +77,7 @@
     }
   }
 
-  #webgl-error-message{
+  #webgl-error-message, .vjs-cross-domain-unsupport{
     position: relative;
     font-family: monospace;
     font-size: 13px;
